--- a/products.html
+++ b/products.html
@@ -100,49 +100,49 @@
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
-                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img01.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2017</span></div>
+                        <div class="col-lg-5"><img class="img-fluid card-img w-100" src="assets/img/home/img12.jpg" alt="" />
+                          <!-- <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2017</span></div> -->
                         </div>
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Through the Eyes of Kubrick</h1>
-                          <p class="text-warning fs-3 opacity-75">Individual</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p><button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Why do we use it?</h1>
+                          <p class="text-warning fs-3 opacity-75">Catagory</p>
+                          <p class="fs-0">it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p><button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
-                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img02.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>
+                        <div class="col-lg-5"><img class="img-fluid card-img w-100" src="assets/img/home/img12.jpg" alt="" />
+                          <!-- <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div> -->
                         </div>
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Wave of Surrealism in photography</h1>
-                          <p class="text-warning fs-3 opacity-75">Collective</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p><button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Why do we use it?</h1>
+                          <p class="text-warning fs-3 opacity-75">Catagory</p>
+                          <p class="fs-0">it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p><button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
-                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img03.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>
+                        <div class="col-lg-5"><img class="img-fluid card-img card-img w-100" src="assets/img/home/img12.jpg" alt="" />
+                          <!-- <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div> -->
                         </div>
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Through the Eyes of Kubrick</h1>
-                          <p class="text-warning fs-3 opacity-75">Individual</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p><button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Why do we use it?</h1>
+                          <p class="text-warning fs-3 opacity-75">Catagory</p>
+                          <p class="fs-0">it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p><button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
-                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img04.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>
+                        <div class="col-lg-5"><img class="img-fluid card-img w-100" src="assets/img/home/img12.jpg" alt="" />
+                          <!-- <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div> -->
                         </div>
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Through the Eyes of Kubrick</h1>
-                          <p class="text-warning fs-3 opacity-75">Individual</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p><button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Why do we use it?</h1>
+                          <p class="text-warning fs-3 opacity-75">Catagory</p>
+                          <p class="fs-0">it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p><button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
                         </div>
                       </div>
                     </div>
