--- a/portfolio.html
+++ b/portfolio.html
@@ -103,13 +103,13 @@
                         <div class="col-xl-7">
                           <div class="position-relative">
                             <div class="position-absolute start-0 bottom-0 ms-3">
-                              <h3 class="text-white">Mogadisu Somalia</h3>
+                              <h3 class="text-white">Alientekk</h3>
                               <p class="text-300">Shooting and Advertisement Campaign</p>
-                            </div><img class="portfolio-img img-fluid" src="assets/img/portfolio/img01.png" alt="" />
+                            </div><img class="portfolio-img img-fluid" src="assets/img/home/img9.jpg" alt="" />
                           </div>
                         </div>
                         <div class="col-xl-4 mt-4">
-                          <p class="fs-0">I a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
+                          <p class="fs-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
                         </div>
                       </div>
                     </div>
@@ -118,13 +118,13 @@
                         <div class="col-xl-7">
                           <div class="position-relative">
                             <div class="position-absolute start-0 bottom-0 ms-3">
-                              <h3 class="text-white">Mogadisu Somalia</h3>
+                              <h3 class="text-white">Alientekk</h3>
                               <p class="text-300">Shooting and Advertisement Campaign</p>
-                            </div><img class="portfolio-img img-fluid" src="assets/img/portfolio/img02.png" alt="" />
+                            </div><img class="portfolio-img img-fluid" src="assets/img/home/img9.jpg"  alt="" />
                           </div>
                         </div>
                         <div class="col-xl-4 mt-4">
-                          <p class="fs-0">I a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
+                          <p class="fs-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
                         </div>
                       </div>
                     </div>
@@ -133,13 +133,13 @@
                         <div class="col-xl-7">
                           <div class="position-relative">
                             <div class="position-absolute start-0 bottom-0 ms-3">
-                              <h3 class="text-white">Mogadisu Somalia</h3>
+                              <h3 class="text-white">Alientekk</h3>
                               <p class="text-300">Shooting and Advertisement Campaign</p>
-                            </div><img class="portfolio-img img-fluid" src="assets/img/portfolio/img03.png" alt="" />
+                            </div><img class="portfolio-img img-fluid" src="assets/img/home/img9.jpg" alt="" />
                           </div>
                         </div>
                         <div class="col-xl-4 mt-4">
-                          <p class="fs-0">I a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
+                          <p class="fs-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
                         </div>
                       </div>
                     </div>
