--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                             <div class="position-absolute start-0 bottom-0 ms-3">
                               <h3 class="text-white">Alientekk</h3>
                               <p class="text-300">Shooting and Advertisement Campaign</p>
-                            </div><img class="portfolio-img img-fluid" src="assets/img/home/img9.jpg" alt="" />
+                            </div><img class="portfolio-img img-fluid card-img" src="assets/img/home/img9.jpg" alt="" />
                           </div>
                         </div>
                         <div class="col-xl-4 mt-4">
@@ -120,7 +120,7 @@
                             <div class="position-absolute start-0 bottom-0 ms-3">
                               <h3 class="text-white">Alientekk</h3>
                               <p class="text-300">Shooting and Advertisement Campaign</p>
-                            </div><img class="portfolio-img img-fluid" src="assets/img/home/img9.jpg"  alt="" />
+                            </div><img class="portfolio-img img-fluid card-img" src="assets/img/home/img9.jpg"  alt="" />
                           </div>
                         </div>
                         <div class="col-xl-4 mt-4">
@@ -135,7 +135,7 @@
                             <div class="position-absolute start-0 bottom-0 ms-3">
                               <h3 class="text-white">Alientekk</h3>
                               <p class="text-300">Shooting and Advertisement Campaign</p>
-                            </div><img class="portfolio-img img-fluid" src="assets/img/home/img9.jpg" alt="" />
+                            </div><img class="portfolio-img img-fluid card-img" src="assets/img/home/img9.jpg" alt="" />
                           </div>
                         </div>
                         <div class="col-xl-4 mt-4">
