--- a/catalogue.html
+++ b/catalogue.html
@@ -1,12 +1,13 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content=" width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="images/microsoft-svgrepo-com.svg" />
-    <title>Portfolio</title>
+    <link rel="icon" type="image/svg" href="images/microsoft-logo-svgrepo-com.svg" />
+    <title>Catalogue</title>
     <link href="css/animate.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.menu.css" rel="stylesheet" type="text/css">
@@ -44,11 +45,11 @@
                                 <li class="nav-item">
                                   <a class="nav-link" href="index.html">Home</a>
                                 </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="catalogue.html">Catalogue</a>
-                                </li>
                                 <li class="nav-item active">
-                                  <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
+                                  <a class="nav-link" href="#">Catalogue <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="portfolio.html">Portfolio </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
@@ -273,122 +274,85 @@ by translating the first group to 0 (alongside the stars) the waves are pushed b
                 </div>
             </div>
         </header>
+        <!-- Contact Page -->
+    <div id="next-page-wrapper">
+        <!-- Project Page -->
+        <div class="container mb-4 mt-4">
+            <div class="row">
+                <div class="col-md-12 animate-box" data-animate-effect="fadeInUp"> 
+                   <img class="img-fluid" src="images/img-1.jpg" alt="">
+                    <h2 class="mt-20"><span>Catalogue Name</span></h2>
+                    <p>simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                         when an unknown printer took a galley of type and scrambled it to make a type 
+                         specimen book. It has survived not only five centuries, but also the leap into
+                          electronic typesetting, remaining essentially unchanged. It was popularised in the 
+                          1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more 
+                          recently with desktop
+                         publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                </div>
+            </div>
+        </div>
+        <!-- Project Page -->
+        <div class="container mb-4 mt-4">
+            <div class="row">
+                <div class="col-md-12 animate-box" data-animate-effect="fadeInUp"> 
+                   <img class="img-fluid" src="images/img-2.jpg" alt="">
+                   <h2 class="mt-20"><span>Catalogue Name</span></h2>
+                   <p>simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                     when an unknown printer took a galley of type and scrambled it to make a type 
+                     specimen book. It has survived not only five centuries, but also the leap into
+                      electronic typesetting, remaining essentially unchanged. It was popularised in the 
+                      1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more 
+                      recently with desktop
+                     publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                </div>
+            </div>
+        </div>
+        <!-- Project Page -->
+        <div class="container mb-4 mt-4">
+            <div class="row">
+                <div class="col-md-12 animate-box" data-animate-effect="fadeInUp"> 
+                   <img class="img-fluid" src="images/img-1.jpg" alt="">
+                   <h2 class="mt-20"><span>Catalogue Name</span></h2>
+                   <p>simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                     when an unknown printer took a galley of type and scrambled it to make a type 
+                     specimen book. It has survived not only five centuries, but also the leap into
+                      electronic typesetting, remaining essentially unchanged. It was popularised in the 
+                      1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more 
+                      recently with desktop
+                     publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                </div>
+            </div>
+        </div>
         <!-- Gallery -->
-        <section class="works">
+        <!-- <div class="works">
             <div class="container">
                 <div class="row">
-                    <div class="section-head col-md-12">
+                    <div class="gallery mt-60 mb-60 full-width animate-box" data-animate-effect="fadeInUp">
                         <div class="row">
-                            <!-- Title -->
-                            <div class="col-md-12">
-                                <h4 class="animate-box" data-animate-effect="fadeInUp"><span class="p-0">Selected Work</span></h4>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- gallery -->
-                    <div class="gallery full-width animate-box" data-animate-effect="fadeInUp">
-                        <div class="row">
-                            <div class="col-md-4 items interior">
+                            <div class="col-md-4 items">
                                 <div class="item-img">
-                                    <a href="images/img-2.jpg" title="Le Global Design" class="popimg"> <img src="images/img-2.jpg" alt="image">
-                                        <div class="item-img-overlay">
-                                            <div class="overlay-info full-width">
-                                                <p>Description</p>
-                                                <h6>Catagory</h6>
-                                            </div>
-                                        </div>
-                                    </a>
+                                    <a href="images/blog/3.jpg" class="popimg"> <img src="images/blog/3.jpg" alt="image"></a>
                                 </div>
                             </div>
-                            <div class="col-md-4 items interior">
+                            <div class="col-md-4 items">
                                 <div class="item-img">
-                                    <a href="images/img-2.jpg" title="Le Global Design" class="popimg"> <img src="images/img-2.jpg" alt="image">
-                                        <div class="item-img-overlay">
-                                            <div class="overlay-info full-width">
-                                                <p>Description</p>
-                                                <h6>Catagory</h6>
-                                            </div>
-                                        </div>
-                                    </a>
+                                    <a href="images/blog/2.jpg" class="popimg"> <img src="images/blog/2.jpg" alt="image"></a>
                                 </div>
                             </div>
-                            <div class="col-md-4 items interior">
+                            <div class="col-md-4 items">
                                 <div class="item-img">
-                                    <a href="images/img-2.jpg" title="Le Global Design" class="popimg"> <img src="images/img-2.jpg" alt="image">
-                                        <div class="item-img-overlay">
-                                            <div class="overlay-info full-width">
-                                                <p>Description</p>
-                                                <h6>Catagory</h6>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-4 items interior">
-                                <div class="item-img">
-                                    <a href="images/img-2.jpg" title="Le Global Design" class="popimg"> <img src="images/img-2.jpg" alt="image">
-                                        <div class="item-img-overlay">
-                                            <div class="overlay-info full-width">
-                                                <p>Description</p>
-                                                <h6>Catagory</h6>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-4 items interior">
-                                <div class="item-img">
-                                    <a href="images/img-2.jpg" title="Le Global Design" class="popimg"> <img src="images/img-2.jpg" alt="image">
-                                        <div class="item-img-overlay">
-                                            <div class="overlay-info full-width">
-                                                <p>Description</p>
-                                                <h6>Catagory</h6>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-4 items interior">
-                                <div class="item-img">
-                                    <a href="images/img-2.jpg" title="Le Global Design" class="popimg"> <img src="images/img-2.jpg" alt="image">
-                                        <div class="item-img-overlay">
-                                            <div class="overlay-info full-width">
-                                                <p>Description</p>
-                                                <h6>Catagory</h6>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-4 items interior">
-                                <div class="item-img">
-                                    <a href="images/img-2.jpg" title="Le Global Design" class="popimg"> <img src="images/img-2.jpg" alt="image">
-                                        <div class="item-img-overlay">
-                                            <div class="overlay-info full-width">
-                                                <p>Description</p>
-                                                <h6>Catagory</h6>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-4 items interior">
-                                <div class="item-img">
-                                    <a href="images/img-2.jpg" title="Le Global Design" class="popimg"> <img src="images/img-2.jpg" alt="image">
-                                        <div class="item-img-overlay">
-                                            <div class="overlay-info full-width">
-                                                <p>Description</p>
-                                                <h6>Catagory</h6>
-                                            </div>
-                                        </div>
-                                    </a>
+                                    <a href="images/blog/4.jpg" class="popimg"> <img src="images/blog/4.jpg" alt="image"></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div> -->
         <!-- Footer -->
         <footer>
             <div class="container next-footer-container">
